--- a/kontext/src/app/home/home.component.html
+++ b/kontext/src/app/home/home.component.html
@@ -1,62 +1,3 @@
-<!--<div class="section-header">-->
-  <!--<ol class="breadcrumb">-->
-    <!--&lt;!&ndash;<li><a routerLink="/home">home</a></li>&ndash;&gt;-->
-    <!--<li class="active">home</li>-->
-  <!--</ol>-->
-<!--</div>-->
-
-<!--<h2 class="text-light text-center">KTEK Home<br><small class="text-primary">Kenda Tire Engineering Kit</small></h2>-->
-
-  <!--<div class="col-xs-10 col-xs-offset-1" style="margin-top: 25px;">-->
-    <!--<div class="card">-->
-      <!--<div class="card-head">-->
-        <!--<header>KTEK Usage Metrics </header>-->
-      <!--</div>-->
-      <!--<div class="card-body">-->
-        <!--<div *ngIf="projects">-->
-          <!--<button class="btn btn-default" (click)="log()">click me</button>-->
-          <!--<ul>-->
-            <!--<li *ngFor="let project of projects">-->
-              <!--{{project.name}}-->
-            <!--</li>-->
-          <!--</ul>-->
-        <!--</div>-->
-
-        <!--<div class="stick-bottom-right">-->
-
-        <!--</div>-->
-      <!--</div>&lt;!&ndash;end .card-body &ndash;&gt;-->
-    <!--</div>&lt;!&ndash;end .card &ndash;&gt;-->
-  <!--</div>-->
-  <!--<div class="col-xs-10 col-xs-offset-1" >-->
-    <!--<div class="card">-->
-      <!--<div class="card-head">-->
-        <!--<header>Analysis Queue </header>-->
-      <!--</div>-->
-      <!--<div class="card-body">-->
-          <!--<div class="stick-bottom-right">-->
-          <!--</div>-->
-      <!--</div>&lt;!&ndash;end .card-body &ndash;&gt;-->
-    <!--</div>&lt;!&ndash;end .card &ndash;&gt;-->
-  <!--</div>-->
-  <!--<div class="col-xs-10 col-xs-offset-1" >-->
-    <!--<div class="card">-->
-      <!--<div class="card-head">-->
-        <!--<header>New KTEK Features</header>-->
-      <!--</div>-->
-      <!--<div class="card-body">-->
-          <!--<ul>-->
-            <!--<li>Quicker Index Page Loading</li>-->
-            <!--<li>Better Filtering</li>-->
-            <!--<li>More Robust Job-Tracking</li>-->
-            <!--<li>Tool Integration</li>-->
-          <!--</ul>-->
-          <!--<div class="stick-bottom-right">-->
-          <!--</div>-->
-      <!--</div>&lt;!&ndash;end .card-body &ndash;&gt;-->
-    <!--</div>&lt;!&ndash;end .card &ndash;&gt;-->
-  <!--</div>-->
-
 <app-nav></app-nav>
 
 <app-content></app-content>
@@ -65,5 +6,5 @@
 
 <app-filter></app-filter>
 
-<ngx-toasta [position]="'bottom-fullwidth'"></ngx-toasta>
+<ngx-toasta [position]="'top-fullwidth'"></ngx-toasta>
 
