--- a/kontext/src/app/crud/forms/project.component.html
+++ b/kontext/src/app/crud/forms/project.component.html
@@ -11,7 +11,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 class="modal-title" id="projectCreateForm">Create A Project</h3>
+        <h3 class="modal-title" id="projectCreateForm">Create A New Project</h3>
         <p class="text-muted"><span class="text-primary" style="font-weight: bold;">*required</span>/optional</p>
       </div>
       <form class="form-horizontal"
@@ -141,69 +141,98 @@
       </div>
       <form class="form-horizontal" name="form" (ngSubmit)="f.form.valid && update()" #f="ngForm" novalidate>
         <div class="modal-body">
+          <!--PROJECT NAME-->
           <div class="form-group">
             <div class="col-sm-3">
               <label for="pr_name_edit" class="text-primary" style="font-weight: bold;">*Name </label>
             </div>
             <div class="col-sm-9">
-              <input type="text" name="project_name" id="pr_name_edit" class="form-control" placeholder="Project Name">
+              <input type="text"
+                     name="project_name"
+                     id="pr_name_edit"
+                     [(ngModel)]="model.name"
+                     #name="ngModel"
+                     class="form-control"
+                     placeholder="Project Name">
               <div class="form-control-line"></div>
             </div>
           </div>
+
+          <!--PROJECT NUMBER-->
           <div class="form-group">
             <div class="col-sm-3">
               <label for="pr_number_edit" class="control-label">Number</label>
             </div>
             <div class="col-sm-9">
-              <input type="number" name="pr_number" id="pr_number_edit" class="form-control" placeholder="Project Number">
+              <input type="number"
+                     name="pr_number"
+                     [(ngModel)]="model.number"
+                     #number="ngModel"
+                     id="pr_number_edit"
+                     class="form-control"
+                     placeholder="Project Number">
               <div class="form-control-line"></div>
             </div>
           </div>
+
+          <!--PROJECT TYPE-->
           <div class="form-group">
             <div class="col-sm-3">
               <label for="pr_type_edit" class="text-primary" style="font-weight: bold;">*Project Type</label>
             </div>
             <div class="col-sm-9">
-              <select name="pr_type" class="form-control" id="pr_type_edit">
-                <option> &nbsp;</option>
-                <option>Replacement</option>
-                <option>OE</option>
-                <option>Research</option>
+              <select name="pr_type"
+                      [(ngModel)]="model.project_type"
+                      #project_type="ngModel"
+                      class="form-control"
+                      id="pr_type_edit">
+                <option [value]="null"></option>
+                <option [value]="'REP'">Replacement</option>
+                <option [value]="'OE'">OE</option>
+                <option [value]="'RES'">Research</option>
               </select>
             </div>
           </div>
-          <div class="form-group">
-            <div class="col-sm-3">
-              <label for="description_edit" class="control-label">Description: </label>
-            </div>
-            <div class="col-sm-9">
-              <input type="text" name="description" id="description_edit" class="form-control" placeholder="Description">
-              <div class="form-control-line"></div>
-            </div>
-          </div>
+
+           <!--CUSTOMER-->
           <div class="form-group">
             <div class="col-sm-3">
               <label for="customer_edit" class="control-label">Customer: </label>
             </div>
             <div class="col-sm-9">
-              <input type="text" name="customer" id="customer_edit" class="form-control" placeholder="Customer">
+              <input type="text"
+                     name="customer"
+                     [(ngModel)]="model.customer"
+                     #customer="ngModel"
+                     id="customer_edit"
+                     class="form-control"
+                     placeholder="Customer">
               <div class="form-control-line"></div>
             </div>
           </div>
+
+          <!--DESCRIPTION-->
           <div class="form-group">
             <div class="col-sm-3">
-              <label for="tag_edit" class="control-label">Tag: </label>
+              <label for="description_edit" class="control-label">Description: </label>
             </div>
             <div class="col-sm-9">
-              <input type="text" name="tag" id="tag_edit" class="form-control" placeholder="Tag">
+              <textarea rows="10"
+                        cols="50"
+                        name="description"
+                        [(ngModel)]="model.description"
+                        #description="ngModel"
+                        id="description_edit"
+                        class="form-control">
+              </textarea>
               <div class="form-control-line"></div>
             </div>
           </div>
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger ink-reaction pull-left" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-accent">Save and Continue Editing</button>
-          <button type="button" class="btn btn-accent-dark">Update</button>
+          <button type="button" class="btn btn-accent-dark" (click)="update()">Update</button>
         </div>
       </form>
     </div>
