rewrite switch logic on project-tree

--- a/kontext/src/app/content/details/design-details.component.html
+++ b/kontext/src/app/content/details/design-details.component.html
@@ -1,3 +1,4 @@
+<script src="design-details.component.ts"></script>
 <script src="project-details.component.ts"></script>
 <script src="phase-details.component.ts"></script>
 <div *ngIf="design">
