--- a/kontext/src/app/crud/forms/phase.component.html
+++ b/kontext/src/app/crud/forms/phase.component.html
@@ -1,5 +1,6 @@
 
 <!-- PHASE CREATE MODAL-->
+<script src="../project-crud.component.ts"></script>
 <div class="modal fade"
      id="phaseCreateModal"
      tabindex="-1"
